--- a/portfolio.css
+++ b/portfolio.css
@@ -1,67 +1,60 @@
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: black;
-    color: deepskyblue;
 }
-
-.name{
-    color: mistyrose;
+body{
+    background-color:deepskyblue;
 }
-
-body header h2 {
+header {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: deepskyblue;
-    font: 50px;
-
+    color:darkslateblue;
+    background-color:deepskyblue;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-header ul {
-    margin-bottom: 50px;
+.name{
+    color:darkred;
+    background-color: deepskyblue;
+}
+header ul li a {
+    font-size: 30px;
+    text-decoration: none;
+    padding: 10px;
+}
+h1 {
+    font-size:50px;
+    width: 100%;
+    height: 100px;
+}
+.content{
+    display:inline-block;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color:darkslateblue;
+    background-color:darksalmon;
+    }
+.PWS {
+    display: flex;
+    padding-bottom: 200px;
+    padding-top: 200px;
+}
+.PWScontent {
+    padding: 20px;
+    text-align: center;
 }
 .PWSG {
-    align-items: center;
-    style:flex;
-    block-size: 400px;
-    margin-left: 310px;
-
+    height:400px;
+    width:auto;
 }
-.PWSG2 {
-    align-items: center;
-    style:flex;
-    block-size: 400px;
+.PWSG2{
+    height:400px;
+    width:auto;
 }
-
-.HRSN {
-    block-size: 400px;
-    align-items: center;
-    margin-left: 500px;
-}
-
-body header h2 span{
-    padding-right: 5px;
-}
-
-body header {
+.HRP{
     text-align: center;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font: 20px;
-    color:deepskyblue;
-    
+    padding-bottom: 100px;
 }
-h3 {
-    text-align: center;
-}
-h4 {
-    text-align: center;
-}
-ul {
-    text-align: center;
-}
-.PWS {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-bottom: 50px;
-}
-.HRP {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-bottom: 50px;
+.HRSN{
+
+    height: 495px;
+    width: auto;
 }
