--- a/portfolio.css
+++ b/portfolio.css
@@ -26,6 +26,9 @@ h1 {
     width: 100%;
     height: 100px;
 }
+h3 {
+    text-decoration: underline;
+}
 .content{
     display:inline-block;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
