--- a/portfolio.css
+++ b/portfolio.css
@@ -19,15 +19,58 @@ header {
 header ul li a {
     font-size: 30px;
     text-decoration: none;
+    text-align: center;
     padding: 10px;
+    color:darkred;
+    margin-left: 40%;
+    animation-name: fixposition;
+    animation-duration: 3s;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-play-state:initial;
+    animation-direction:initial;
+}
+@keyframes fixposition {
+    0% {
+        color: blueviolet;
+        margin-left: 0%;
+    }
+    100% {
+        color: darkred;
+        margin-left: 40%;
+    }
+    
 }
 h1 {
     font-size:50px;
     width: 100%;
     height: 100px;
+    text-align: center;
+    animation-name: slide;
+    animation-duration: 3s;
+    animation-delay: .75s;
+    animation-iteration-count: 5;
+    animation-play-state:running;
+    animation-direction: alternate;
+}
+@keyframes slide {
+    30% {
+        margin-right: 200%;
+    }
+    100% {
+        margin-left: 20%;
+    }
+}
+#preguide {
+    padding-right: 110px;
 }
 h3 {
-    text-decoration: underline;
+    text-decoration:underline;
+}
+
+.SOURCE {
+    text-decoration: none;
+    margin-top: 20px;
 }
 .content{
     display:inline-block;
@@ -38,22 +81,17 @@ h3 {
     }
 .PWS {
     display: flex;
-    border: 9px solid darkslateblue;
+    border: 10px solid darkslateblue;
 }
 .PWScontent {
     padding: 20px;
     text-align: center;
     border: 9px solid darkgreen;
 }
-.PWSG {
-    height:450px;
-    width:auto;
+.aH {
+    height:455px;
     border: 9px solid darkgoldenrod;
-}
-.PWSG2{
-    height:450px;
-    width:auto;
-    border: 9px solid darkgoldenrod;
+    bottom: -2px;
 }
 .HRP{
     text-align: center;
@@ -63,6 +101,5 @@ h3 {
 }
 .HRSN{
     height: 570px;
-    width: auto;
     border: 9px solid dodgerblue;
 }
