--- a/portfolio.css
+++ b/portfolio.css
@@ -45,20 +45,19 @@ h1 {
     font-size:50px;
     width: 100%;
     height: 100px;
-    text-align: center;
     animation-name: slide;
-    animation-duration: 3s;
+    animation-duration: 5s;
     animation-delay: .75s;
-    animation-iteration-count: 5;
+    animation-iteration-count:infinite;
     animation-play-state:running;
     animation-direction: alternate;
 }
 @keyframes slide {
-    30% {
-        margin-right: 200%;
+    0% {
+        margin-left: 0%;
     }
     100% {
-        margin-left: 20%;
+        margin-left: 60%;
     }
 }
 #preguide {
