--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -17,12 +17,13 @@ header {
     padding-bottom: 0px;
 
 }
-header h1 {
-    transform: skew(-15deg);
-}
+
 .name{
     color:darkred;
     background-color: gray;
+}
+.name:hover{
+    color:rgb(0, 0, 0)
 }
 header ul li a {
     font-family: Didot;
@@ -61,6 +62,7 @@ h1 {
     animation-iteration-count:infinite;
     animation-play-state:running;
     animation-direction: alternate;
+    transform: skew(-15deg);
 }
 @keyframes slide {
     0% {
@@ -68,6 +70,22 @@ h1 {
     }
     100% {
         margin-left: 44%;
+    }
+}
+h1:hover{
+    color: black;
+    animation-name: spin;
+    animation-duration: 5s;
+    animation-delay: .1s;
+    animation-iteration-count: 5;
+    transform: skew(-15deg);
+}
+@keyframes spin {
+    0% {
+        transform: skew(-15deg) rotateX(0deg);
+    }
+    100% {
+        transform: skew(-15deg) rotateX(1080deg);
     }
 }
 .subheading {
@@ -102,11 +120,15 @@ h3 {
     padding: 20px;
     text-align: center;
 }
+
 .aH {
     height:455px;
     margin-bottom: 100px;
     border: 9px rgb(0, 0, 0) ridge;
     border-radius: 5px;
+}
+.aH:hover{
+    border: 9px darkred ridge;
 }
 #PWSG {
     margin-left: 10px;
@@ -115,16 +137,32 @@ h3 {
     margin-right: 10px;
 }
 .HRP{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     padding-top: 0px;
     padding-bottom: 50px;
 }
+#cat {
+    height: 100px;
+    width: 100px;
+    align-items: center;
+    mix-blend-mode:color-burn;
+    z-index: 2;
+}
 .HRSN{
+    position: relative;
     height: 570px;
     border: 9px rgb(0, 0, 0) ridge;
     border-radius: 3px;
     margin-bottom: 30px;
+    top: -8.75px;
 }
+.HRSN:hover{
+    border: 9px darkred ridge;
+}
+
 
 @media (min-width: 1600px) {
     .PWScontent {
