--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -20,10 +20,11 @@ header {
 
 .name{
     color:darkred;
-    background-color: gray;
+    background-color:default;
 }
 .name:hover{
-    color:rgb(0, 0, 0)
+    color:rgb(0, 0, 0);
+    background-color: none;
 }
 header ul li a {
     font-family: Didot;
@@ -75,17 +76,24 @@ h1 {
 h1:hover{
     color: black;
     animation-name: spin;
-    animation-duration: 5s;
-    animation-delay: .1s;
-    animation-iteration-count: 5;
+    animation-duration: 4s;
+    animation-delay: 0s;
+    animation-iteration-count:1;
+    animation-direction:normal;
     transform: skew(-15deg);
 }
 @keyframes spin {
     0% {
-        transform: skew(-15deg) rotateX(0deg);
+        transform: skew(-15deg);
+    }
+    25% {
+        transform: skew(-15deg) rotateX(60deg) rotateZ(-3deg);
+    }
+    75% {
+        transform: skew(-15deg)rotateX(-60deg) rotateZ(3deg);
     }
     100% {
-        transform: skew(-15deg) rotateX(1080deg);
+        transform: skew(-15deg);
     }
 }
 .subheading {
