--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -162,6 +162,22 @@ h3 {
     top: 34px;
     transform: rotate(9deg);
 }
+#text-box:hover::after {
+    position:absolute;
+    border-left: 10px white solid;
+    border-bottom: 5px wheat solid;
+    border-radius: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    padding-right: 7px;
+    padding-top: 3px;
+    content:"Sucker!";
+    background-color: white;
+    right: 720px;
+    bottom: 115px;
+
+}
 #cat:hover {
     animation: spook;
     animation-duration: 5s;
