final subhead edits

--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -16,7 +16,6 @@ header {
     text-shadow: 10px 10px 8px black;
     margin-bottom: 0px;
     padding-bottom: 0px;
-
 }
 
 .name{
@@ -34,7 +33,7 @@ header ul li a {
     text-align: center;
     padding: 10px;
     color:darkred;
-    margin-left: 37%;
+    margin-left: 39%;
     animation-name: fixposition;
     animation-duration: 3s;
     animation-delay: 0s;
@@ -50,7 +49,7 @@ header ul li a {
     }
     100% {
         color: darkred;
-        margin-left: 37%;
+        margin-left: 39%;
     }
     
 }
@@ -102,6 +101,37 @@ h1:hover{
     border-bottom:groove 10px rgb(95, 95, 95) ;
     border-top: ridge 10px rgb(95, 95, 95);
 }
+#subsub {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-justify: newspaper;
+    margin-right: 15px;
+    margin-left: 15px;
+    top: -50px;
+}
+
+header p a {
+    font-size: 20px;
+    color:darkred;
+    text-decoration: none;
+    animation-name: appear;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-delay: 0s;
+}
+@keyframes appear {
+    0% {
+        color:rgb(35, 35, 35);
+        text-shadow: none;
+    }
+    100% {
+        color: darkred;
+    }
+}
+
 #preguide {
     padding-right: 110px;
 }
@@ -199,7 +229,7 @@ h3 {
     content:"Sucker!";
     background-color: white;
     right: 720px;
-    bottom: 115px;
+    bottom: 50px;
 
 }
 #cat:hover {
