--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -143,7 +143,10 @@ header p a {
     padding-right: 110px;
 }
 h3 {
-    text-decoration:underline;
+    text-decoration:none;
+    border: 3px darkred outset;
+    background-color: rgb(143, 95, 95);
+    margin-bottom: 20px;
 }
 
 .SOURCE {
@@ -364,6 +367,11 @@ h3 {
 .fake:hover .subcont {
     bottom: 295px;
     background-color: darkred;
+}
+
+#contact h3{
+    background-color: wheat;
+    border: none;
 }
 @media (min-width: 1600px) {
     .PWScontent {
