--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
 }
+
 body{
     background-color:gray;
     size: 100%;
@@ -378,11 +379,11 @@ h3 {
         width: 1000px;
     }
 }
-@media (max-width: 700px) {
+@media (max-width: 770px) {
     .HRSN {
         height: 150px;
         width: auto;
-        border: 2px;
+        border:9px rgb(0, 0, 0) ridge;
         border-radius: .5px;
     }
     .aH {
@@ -401,29 +402,91 @@ h3 {
     }
     @keyframes fixposition {
         0% {
-            color: blueviolet;
+            color:rgb(35, 35, 35);
             margin-left: 0%;
         }
         100% {
             color: darkred;
-            margin-left: 30%;
+            margin-left: 34%;
         }
     }
     #preguide {
         padding-right: 40px;
     }
 }
-@media (min-width: 992px) {
+@media (max-width: 1100px) {
     .card {
         display: inline-block;
 
     }
+    .aH{
+        height:300px;
+        width: auto;
+    }
+    .HRSN{
+        height: 330px;
+        width: auto;
+    }
+    #awfork {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    h1{
+        font-size: 30px;
+    }
+    header ul li a {
+        font-size: 20px;
+    }
+    #subsub{
+        top: -25px;
+    }
+    #headonp {
+        margin-left: 6%;
+    }
+    #headcont {
+        margin-right: 11%;
+    }
 }
+
 @media (max-width: 992px) {
     .card {
         display: flex;
         flex-direction: row;
+    }
 
+    .aH {
+        height:250px;
+        width: auto;
+    }
+    h1{
+        font-size: 30px;
+    }
+    .HRSN {
+        height: 280px;
+        width: auto;
+    }
+    header ul li a {
+        font-size: 20px;
+        top:20px;
+    }
+    header p a {
+        font-size: 15px;
+    }
+    #subsub {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        text-justify: newspaper;
+        margin-right: 15px;
+        margin-left: 15px;
+        top: -20px;}
+    header ul li a {
+        top: -35px;
+    }
+    #awfork {
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
 
