responsive PWS update

--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -380,6 +380,13 @@ h3 {
     }
 }
 @media (max-width: 770px) {
+    .PWS{
+        padding: 0px;
+        margin: 0px;
+    }
+    .PWScontent h5 {
+        font-size: 12px;
+    }
     .HRSN {
         height: 150px;
         width: auto;
@@ -390,15 +397,12 @@ h3 {
         height: 110px;
         width: auto;
     }
-    h1 {
-        font-size: 18px;
+    header h1 {
+        font-size: 25px;
     }
     header ul li a {
         font-size: 10px;
         margin-left: 34%;
-    }
-    body {
-        font-size: 10px;
     }
     @keyframes fixposition {
         0% {
