--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -233,7 +233,7 @@ h3 {
 #text-box:hover::after {
     position:absolute;
     border-left: 10px white solid;
-    border-bottom: 5px wheat solid;
+    border-bottom: 5px rgb(177, 198, 205) solid;
     border-radius: 5px;
     padding-bottom: 5px;
     margin-bottom: 5px;
