--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -387,6 +387,8 @@ h3 {
     background-image: url(blaxole.jpg);
     background-position-x: -58px;
     background-position-y: -185px;
+    margin-top: 240px;
+    margin-bottom: 80px;
 }
 #golden {
     color:rgb(255, 247, 10)
