--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -439,6 +439,19 @@ h3 {
     #preguide {
         padding-right: 40px;
     }
+    #contact {
+        display: flex;
+        border: none;
+        border-radius: 0%;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    #o {
+        color: rgb(255, 224, 140);
+    }
+    #contact article {
+        align-items: center;
+    }
 }
 @media (max-width: 1100px) {
     .card {
@@ -471,6 +484,10 @@ h3 {
     }
     #headcont {
         margin-right: 11%;
+    }
+    #contact {
+        margin-left: 20%;
+        margin-right: 20%;
     }
 }
 
