--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -229,22 +229,6 @@ h3 {
 #HRPcontent ul li {
     font-size: 12px;
 }
-#text-box:hover::after {
-    position:absolute;
-    border-left: 10px white solid;
-    border-bottom: 5px rgb(162, 178, 197) solid;
-    border-radius: 5px;
-    padding-bottom: 5px;
-    margin-bottom: 5px;
-    margin-right: 5px;
-    padding-right: 7px;
-    padding-top: 3px;
-    content:"Sucker!";
-    background-color: white;
-    right: 720px;
-    bottom: 50px;
-
-}
 #cat:hover {
     animation: spook;
     animation-duration: 5s;
@@ -396,14 +380,54 @@ h3 {
 #golden {
     color:rgb(255, 247, 10)
 }
-@media (min-width: 1600px) {
+@media (min-width: 1550px) {
     .PWScontent {
         width: 1000px;
+    }
+    #text-box:hover::after {
+        position:absolute;
+        border-left: 10px white solid;
+        border-bottom: 5px rgb(162, 178, 197) solid;
+        border-radius: 5px;
+        padding-bottom: 5px;
+        margin-bottom: 5px;
+        margin-right: 5px;
+        padding-right: 7px;
+        padding-top: 3px;
+        content:"Sucker!";
+        background-color: white;
+        right: 720px;
+        bottom: 50px;
     }
     #o {
         color: black;
     }
 }
+@media (max-width: 1400px) {
+    header h1 {
+        font-size: 35px;
+    }
+    header ul li a {
+        font-size: 20px;
+    }
+    .aH {
+        height: 300px;
+        width: auto;
+    }
+    #contact {
+        width: max-content;
+        padding-left: 20px;
+        margin-left: 27%;
+    }
+}
+
+@media (max-width: 1150px) {
+    #awfork {
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+}
+
 @media (max-width: 770px) {
     .PWS{
         padding: 0px;
@@ -488,8 +512,18 @@ h3 {
         margin-right: 11%;
     }
     #contact {
-        margin-left: 20%;
-        margin-right: 20%;
+        border-radius: 50%;
+        padding-left: 10px;
+        padding-right: 10px;
+        width: max-content;
+        margin-left: 27%;
+    }
+    #o {
+        color: rgb(255, 224, 140);
+    }
+    #contact article ul li{
+        list-style:none;
+        padding: 10px;
     }
 }
 
