--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -144,18 +144,21 @@ header p a {
     font-family: Arial;
     background-image: url(skysit2.jpeg);
     text-align: center;
-    color:rgb(111, 2, 2);
+    color:rgb(132, 5, 5);
     border-top: 8px rgb(89, 130, 181) groove;
     border-bottom: 8px rgb(89, 130, 181) groove;
     background-position-x: -500px;
     background-position-y: -500px;
-    text-shadow: 2px 2px 9px black;
+    text-shadow: 2px 2px 10px black;
     padding-bottom: 9px;
     padding-left: 10px;
     padding-right: 10px;
 }
 #aboutme h2 {
-    text-shadow: 10px 10px 8px black;
+    text-shadow: 5px 5px 9px black;
+}
+#aboutme p {
+    font-size: 20px;
 }
 
 #preguide {
@@ -195,9 +198,11 @@ h3 {
     padding: 20px;
     text-align: center;
 }
-
+.PWS h4 {
+    font-size: 20px;
+}
 .PWS ul li {
-    font-size: 12px;
+    font-size: 20px;
 }
 .aH {
     height: 600px;
@@ -429,6 +434,12 @@ h3 {
     header ul li a {
         font-size: 20px;
     }
+    .PWS h4 {
+        font-size: 15px;
+    }
+    .PWS ul li {
+        font-size: 15px;
+    }
     .aH {
         height: 300px;
         width: auto;
@@ -451,12 +462,31 @@ h3 {
         margin-left: 1%;
         margin-right: 1%;
     }
+    .PWS h4 {
+        font-size: 11px;
+    }
+    .PWS ul li {
+        font-size: 11px;
+    }
 }
 
 @media (max-width: 1100px) {
     .card {
         display: inline-block;
 
+    }
+    #aboutme h2 {
+        text-shadow: 3px 3px 6px black;
+        font-size: 18px;
+    }
+    #aboutme p {
+        font-size: 13px;
+    }
+    .PWS h4 {
+        font-size: 11px;
+    }
+    .PWS ul li {
+        font-size: 11px;
     }
     .aH{
         height:300px;
@@ -466,10 +496,7 @@ h3 {
         height: 330px;
         width: auto;
     }
-    #awfork {
-        margin-left: 10px;
-        margin-right: 10px;
-    }
+
     h1{
         font-size: 30px;
     }
@@ -491,6 +518,10 @@ h3 {
         padding-right: 10px;
         width: max-content;
         margin-left: 27%;
+    }
+    #awfork {
+        margin-left: 10px;
+        margin-right: 10px;
     }
     #o {
         color: rgb(255, 224, 140);
@@ -524,6 +555,12 @@ h3 {
     }
     header p a {
         font-size: 15px;
+    }
+    .PWS h4 {
+        font-size: 11px;
+    }
+    .PWS ul li {
+        font-size: 11px;
     }
     #subsub {
         position: relative;
