--- a/docs/portfolio.css
+++ b/docs/portfolio.css
@@ -142,13 +142,13 @@ header p a {
 #aboutme {
     margin-top: 30px;
     font-family: Arial;
-    background-image: url(skysit2.jpeg);
+    background-image: url(IMG_1906.jpg);
     text-align: center;
     color:rgb(132, 5, 5);
     border-top: 8px rgb(89, 130, 181) groove;
     border-bottom: 8px rgb(89, 130, 181) groove;
-    background-position-x: -500px;
-    background-position-y: -500px;
+    background-position-x: -300px;
+    background-position-y: -400px;
     text-shadow: 2px 2px 10px black;
     padding-bottom: 9px;
     padding-left: 10px;
